--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <fieldset>
 <legend>Ввод личных данных</legend>
-<p><label>Ваше Имя:<input type="text" name="name" size="30" maxlength="10"></label></p>
+<p><label>
 <p><label>Ваш пароль:<input type="password" name="password" size="30" maxlength="8" minlength="4"></label></p>
 </fieldset>
 
